--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<img src="#hff" alt ="tree img" >
+		<h1 class="middle"><big>Pricing Card</big></h1>
+		<p class="middle">Price: RS.200</p>
+		<p class="middle">Description: Lorem <br>ipsum dolor sit amet,<br> consectetur adipiscing<br> elit.</p>
+		<button type="submit" id="btn">Buy Now</button>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
