--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<img src="#hff" alt ="tree img" >
+		<img src="https://tse1.mm.bing.net/th?id=OIP.Op8CEP99HoMDn_I3yBusrgHaEI&pid=Api&rs=1&c=1&qlt=95&h=180" alt ="tree img" >
 		<h1 class="middle"><big>Pricing Card</big></h1>
 		<p class="middle">Price: RS.200</p>
 		<p class="middle">Description: Lorem <br>ipsum dolor sit amet,<br> consectetur adipiscing<br> elit.</p>
